deployment/k8s/ingress/airflow-webserver-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-webserver
spec:
  rules:
  - host: server03100.cyberlaxy.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
